# alaya-agent-rs

./: .gitignore  Cargo.toml  README.md
src/: core.rs  lib.rs
src/agent/: agent_state.rs  call_model.rs  context.rs  mod.rs  tests.rs
src/agent/agent_actor/: builder.rs  lifecycle.rs  loop_control.rs  mod.rs  types.rs
src/agent/compress/: conversation.rs  mod.rs  rule.rs  summary.rs  tests.rs  types.rs
src/agent/filesystem/: memory_store.rs  mod.rs  selector.rs
src/agent/hooks/: ask_user.rs  execution_policy.rs  metrics.rs  mod.rs  send_model_evt.rs  update_frame.rs
src/agent/memory/: mod.rs  store.rs  tests.rs  tools.rs  types.rs
src/agent/select/: mod.rs  selector.rs  tests.rs  tools.rs  types.rs
src/agent/tools/: ask_user.rs  mod.rs  playwright_cli.rs  registry.rs
src/models/: chat_model.rs  gen_audio_model.rs  gen_img_model.rs  mod.rs
src/providers/: deepseek.rs  mod.rs  openai_compatible.rs  openrouter.rs  types.rs  utils.rs
