[package]
name = "alaya-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json", "gzip", "stream"] }
futures = "0.3.32"
thiserror = "2.0.18"
async-trait = "0.1.89"
dotenv = "0.15.0"
bytes = "1.11.1"
async-stream = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde"] }
rand = "0.8"
glob = "0.3"
regex = "1"
walkdir = "2"

[dev-dependencies]
rust_decimal_macros = "1"
tempfile = "3"
